--- a/css/style.css
+++ b/css/style.css
@@ -165,3 +165,23 @@ h2 {
   font-size: 0.8em;
   padding: 0.5em;
 }
+
+.footer {
+  height: 5em;
+}
+
+.clear {
+  clear: both;
+}
+
+#game-content .img-container {
+  float: left;
+  margin-right: 1em;
+}
+
+#game-content .img-container .source{
+  text-align: right;
+  padding: 0;
+  margin: 0 0 0.75em;
+  font-size: 0.75em;
+}
