--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,10 @@ h2 {
   clear: both;
 }
 
+#game-content p {
+  line-height: 1.6em;
+}
+
 #game-content .img-container {
   float: left;
   margin-right: 1em;
