--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,12 @@ h1 {
 #main-body {
   clear: both;
   width: 1000px;
-  margin: 3em auto 0;
+  margin: 2em auto 0;
+}
+
+#main-body p {
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
 }
 
 #checklist {
