--- a/css/style.css
+++ b/css/style.css
@@ -194,3 +194,15 @@ h2 {
   margin: 0 0 0.75em;
   font-size: 0.75em;
 }
+
+.map-wrapper {
+  padding: 40px;
+  background-color: aquamarine;
+}
+
+#map {
+  width: 600px;
+  height: 400px;
+  background-color: gray;
+  margin: 0 auto;
+}
