--- a/css/style.css
+++ b/css/style.css
@@ -206,3 +206,15 @@ h2 {
   background-color: gray;
   margin: 0 auto;
 }
+
+#legend {
+  background: #fff;
+  padding: 10px;
+  margin: 10px;
+  border: 3px solid #000;
+  display: none;
+}
+
+#legend h3 {
+  margin-top: 0;
+}
