adding style to map

--- a/css/style.css
+++ b/css/style.css
@@ -214,10 +214,17 @@ h2 {
   background: #fff;
   padding: 10px;
   margin: 10px;
-  border: 3px solid #000;
   display: none;
+  border-radius: 2px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 1px 4px -1px
 }
 
 #legend h3 {
   margin-top: 0;
+  margin-bottom: 0.25em;
+}
+
+#legend p {
+  padding: 0;
+  margin: 0.3em 0 0 0.5em;
 }
