--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-body {
-  min-width: 1200px;
-}
-
 h1 {
   text-align: center;
   margin: 0;
@@ -19,7 +15,9 @@ h1 {
   float: left;
   width: 100%;
   background-color: red;
+  overflow: hidden;
 }
+
 
 #main-nav ul {
   list-style-type: none;
@@ -54,8 +52,7 @@ h1 {
 
 #main-body {
   clear: both;
-  width: 1000px;
-  margin: 2em auto 0;
+  margin: 2em 1em 0;
 }
 
 #main-body p {
@@ -85,12 +82,11 @@ h1 {
   margin-right: 0.25em;
 }
 
+
 aside.aside-img {
-  position: absolute;
-  width: 150px;
   overflow: hidden;
-  top: 200px;
-  left: max(calc(calc(calc(100% - 1000px) / 2) + 1010px), 1110px);
+  width: 200px;
+  margin: 0 auto;
 }
 
 aside.aside-img img {
@@ -107,7 +103,7 @@ aside.aside-img img {
 .bottom .bottom-col {
   position: relative;
   float: left;
-  width: 50%;
+  width: 100%;
 }
 
 .bottom .lyrics {
@@ -139,6 +135,22 @@ aside.aside-img img {
   display: inline-block;
   padding: 0 0.5em;
   font-style: italic;
+}
+
+@media (min-width: 1000px) {
+  #main-body {
+    width: 1000px;
+    margin: 2em auto 0;
+  }
+  aside.aside-img {
+    width: 150px;
+    position: absolute;
+    top: 200px;
+    left: max(calc(calc(calc(100% - 1000px) / 2) + 1010px), 1110px);
+  }
+  .bottom .bottom-col {
+    width: 50%;
+  }
 }
 
 h2 {
